--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Úterý, 02. 11. 2021</h5>
+<h5>Středa, 03. 11. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Rybí s kari a cuketou</strong>
@@ -50,49 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Úterý 2.11.2021</div>
+<div class="nadpis">Středa 3.11.2021</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Míša dort bez lepku </div>
-<div class="cena">65 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Jáhlový puding se švestkami bez lepku a laktózy</div>
-<div class="cena">65 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Arašídový košíček s čokoládou</div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Zelná polévka s uzeným masem samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Zelná polévka s uzeným masem s menu  <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Krůtí nudličky v red curry omáčce, restovaná zelenina, jasmínová rýže, koriandr <em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Grilovaná vepřová krkovice, karamelizovaná cibule, houbový kuba <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>100g Grilovaný camembert, brusinková omáčka, vařené brambory, trhaný salát <em title="Mléko">7</em><em title="Hořčice">10</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -103,13 +63,13 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smetanová kapustová s krutony</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zeleninová s rozšlehanými vejci </td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">Středa</td><td class="menuName">Sleduj náš instagramový profil "Senkyrna7" a ve středu máš po celý den: 150g  Smažené řízky z vepřové panenky, bramborový salát    77,-</td><td class="menuPrice">Středa</td></tr><tr><td class="menuWeight">TOP:</td><td class="menuName">Katův šleh z vepřového masa a zeleniny, dušená jasmínová rýže</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Koprová omáčka s hovězím masem a vařeným vejcem, kynuté houskové knedlíky</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, bramborové knedlíky, špenát</td><td class="menuPrice">134,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené masové čevabčiči, vařené brambory s máslem a šnitlíkem, hořčice, cibule</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně s paprikášem gratinovaný uzeným sýrem, smažené hranolky</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Dorůžova pečená vepřová panenka, ragú z cukety, lilku a žampionu zjemněné smetanou, hráškové pyré, volské oko</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažený květák, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Steak z vepřové krkovice na fazolových luskách s anglickou slaninou a česnekem, pečené brambory s kmínem</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstovinový salát se zeleninou ochucený česnekovým dresinkem, filírovaná kuřecí prsa, parmazán</td><td class="menuPrice">133,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Pečená masová sekaná, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight">Insta sleva</td><td class="menuName">Sleduješ náš profil "Senkyrna7" na instagramu, pak můžeš čerpat slevu: 150g  Smažené řízky z vepřové panenky, bramborový salát, citron (poprosíme o předložení sledování našeho profilu "Senkyrna7" na telefonu)</td><td class="menuPrice">77,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažené řízky z vepřové panenky, bramborový salát, citron</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špikovaná hovězí kýta na divoko, dušená jasmínová rýže</td><td class="menuPrice">134,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřový guláš s cibulí a feferonkou, kynuté houskové knedlíky</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, bramborové knedlíky, dušené bílé zelí </td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g Steak z vepřové pečeně na grilované zelenině s bazalkovým pestem, celerové hranolky, volské oko </td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborové noky se sýrovou omáčkou, filírovaná kuřecí prsa, rukola</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na jemné houbové omáčce, restované špecle</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny ochucený majonézovým dresinkem s hrubozrnou hořčicí, sušenými rajčaty a plátkovanou vepřovou panenkou</td><td class="menuPrice">135,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Instagram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Nepečený piškotový řez s broskvemi a šlehačkou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
@@ -162,7 +122,7 @@ a vanilkovým Crème fraîche	</td>
 </tr>
 <tr>
 <td>
-<table class="dm"><tr><td class="amount"> </td><td class="title">Kuřecí vývar se zeleninou, masem a šunkovým svítkem 1a,3,7,9</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Hovězí kostky na česneku se sekaným špenátem a našimi bramborovými šiškami s vídeňskou cibulkou 1a,3,7</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Zapečené francouzské brambory s uzenou krkovičkou a vejci se salátem z červené řepy 3,7</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Farmářský zeleninový salát s kuřecím masem, slaninou, sázeným vejcem, pečenými brambory Grenaille a hořčičným dresinkem 3,10</td><td class="pricem">129 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Boršč s červenou řepou a zakysanou smetanou 1a,7,9</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Vepřová panenka Wellington s anglickou slaninou a špenátovými listy balená v listovém těstě s mačkanými brambory, demi glace omáčkou a trhaným salátem 1a,3,7,9,10,12</td><td class="pricem">149 Kč</td><tr><tr><td class="amount">180g</td><td class="title">Telecí játra na roštu s hranolky a naší tatarskou omáčkou 1a,3,10</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Plněné cannelloni boloňským ragú zapečené bešamelem a sýrem se sýrovou bylinkovou omáčkou 1a,3,7,9</td><td class="pricem">135 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
